[EDP-DDM-9579] used extended history process instances instead of selecting processExecutionStatus and excerptId
Change-Id: I42cb8dba3030c4c1e03dd39102b485e53b05b129